Bug 152012 - Assertion failure on opening date picker (debug build)
Summary: Assertion failure on opening date picker (debug build)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Hossein
URL:
Whiteboard: target:7.5.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2022-11-12 09:00 UTC by Hossein
Modified: 2022-11-15 00:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Date picker (5.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-12 09:00 UTC, Hossein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2022-11-12 09:00:56 UTC
Created attachment 183551 [details]
Date picker

Description:
While opening the date picker from a DOCX document, I get assertion failure


Steps to Reproduce:
1. Open DOCX attachment
2. Try opening the date picker by clicking on the down button


Actual Results:
Assertion Failure


Expected Results:
No assertion failure


Reproducible: Always


User Profile Reset: No


Additional Info:
The problem does not happen with GTK3 UI. It happened both with X11, GTK4 and Windows UI.

The problem happens in the latest LO 7.5 dev:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab4e40941e9ebae83f98ba918440b03eac5bdcaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3c0be5564afe1b9cc843a49aba88b72af74c43ab
CPU threads: 32; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab4e40941e9ebae83f98ba918440b03eac5bdcaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk4
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The problem does not happen with GTK3 UI:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab4e40941e9ebae83f98ba918440b03eac5bdcaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Hossein 2022-11-12 09:08:18 UTC
Backtrace created with Qt Creator:

1  __pthread_kill_implementation           pthread_kill.c  44   0x7ffff79dca7c 
2  __pthread_kill_internal                 pthread_kill.c  78   0x7ffff79dca7c 
3  __GI___pthread_kill                     pthread_kill.c  89   0x7ffff79dca7c 
4  __GI_raise                              raise.c         26   0x7ffff7988476 
5  __GI_abort                              abort.c         79   0x7ffff796e7f3 
6  __assert_fail_base                      assert.c        92   0x7ffff796e71b 
7  __GI___assert_fail                      assert.c        101  0x7ffff797fe96 
8  o3tl::span<int const>::operator[]       span.hxx        83   0x7fffeee77664 
9  OutputDevice::ImplLayout                text.cxx        1396 0x7fffeee6e307 
10 OutputDevice::DrawTextArray             text.cxx        948  0x7fffeee6c22b 
11 Calendar::ImplDraw                      calendar.cxx    710  0x7fffeec8f40b 
12 Calendar::Paint                         calendar.cxx    1133 0x7fffeec9187b 
13 PaintHelper::DoPaint                    paint.cxx       313  0x7fffee9cfd6a 
14 vcl::Window::ImplCallPaint              paint.cxx       617  0x7fffee9d1349 
15 PaintHelper::~PaintHelper               paint.cxx       552  0x7fffee9d0ca6 
16 vcl::Window::ImplCallPaint              paint.cxx       623  0x7fffee9d13a9 
17 PaintHelper::~PaintHelper               paint.cxx       552  0x7fffee9d0ca6 
18 vcl::Window::ImplCallPaint              paint.cxx       623  0x7fffee9d13a9 
19 PaintHelper::~PaintHelper               paint.cxx       552  0x7fffee9d0ca6 
20 vcl::Window::ImplCallPaint              paint.cxx       623  0x7fffee9d13a9 
21 PaintHelper::~PaintHelper               paint.cxx       552  0x7fffee9d0ca6 
22 vcl::Window::ImplCallPaint              paint.cxx       623  0x7fffee9d13a9 
23 vcl::Window::ImplCallOverlapPaint       paint.cxx       644  0x7fffee9d1501 
24 vcl::Window::ImplHandlePaintHdl         paint.cxx       667  0x7fffee9d1682 
25 vcl::Window::LinkStubImplHandlePaintHdl paint.cxx       648  0x7fffee9d1545 
26 Link<Timer *, void>::Call               link.hxx        111  0x7fffef3d4741 
27 Timer::Invoke                           timer.cxx       75   0x7fffef3d45ad 
28 Scheduler::CallbackTaskScheduling       scheduler.cxx   472  0x7fffef380bd6 
29 SalTimer::CallCallback                  saltimer.hxx    54   0x7fffe4d5e985 
30 X11SalData::Timeout                     saldata.cxx     547  0x7fffe4d5d10e 
31 SalXLib::CheckTimeout                   saldata.cxx     631  0x7fffe4d5d7b5 
32 SalXLib::Yield                          saldata.cxx     712  0x7fffe4d5df5f 
33 X11SalInstance::DoYield                 salinst.cxx     192  0x7fffe4d80f69 
34 ImplYield                               svapp.cxx       475  0x7fffef3b0bb2 
35 Application::Yield                      svapp.cxx       559  0x7fffef3b1894 
36 Application::Execute                    svapp.cxx       453  0x7fffef3b0852 
37 desktop::Desktop::Main                  app.cxx         1604 0x7ffff7bf40a4 
38 ImplSVMain                              svmain.cxx      203  0x7fffef3d0613 
39 SVMain                                  svmain.cxx      235  0x7fffef3d073c 
40 soffice_main                            sofficemain.cxx 94   0x7ffff7c5f571 
41 sal_main                                main.c          51   0x555555554a60 
42 main                                    main.c          49   0x555555554a42
Comment 2 Aron Budea 2022-11-12 14:46:48 UTC
Confirmed using a debug build of 7.5.0.0.alpha0+ (3df534a5ba01ec32590adb6c05ee6621e136b55e) / Ubuntu (VCL: x11).

The exact assertion:

include/o3tl/span.hxx:83: constexpr o3tl::span<T>::value_type& o3tl::span<T>::operator[](o3tl::span<T>::size_type) const [with T = const int; o3tl::span<T>::reference = const int&; o3tl::span<T>::size_type = long unsigned int]: Assertion `pos < size()' failed.
Comment 3 Commit Notification 2022-11-14 11:09:13 UTC
Hossein committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d7db6981e5087507c02bde6c0841c388cfaad0f

tdf#152012 Fix assert fail on opening date picker

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.