sw/qa/uitest/writer_tests5/DateFormFieldPropertiesDialog.py
@@ -8,6 +8,7 @@
 #
 from uitest.framework import UITestCase
 from uitest.uihelper.common import get_state_as_dict, get_url_for_data_file
+from libreoffice.uno.propertyvalue import mkPropertyValues
 
 class dateFormFieldDialog(UITestCase):
 
@@ -124,5 +125,19 @@ class dateFormFieldDialog(UITestCase):
 
             # a placeholder text is not changed by format change
             self.assertEqual(writer_doc.getText().getString(), "Jul 17, 2019")
+
+    def test_date_picker_drop_down(self):
+        with self.ui_test.load_file(get_url_for_data_file("date_picker.docx")) as writer_doc:
+            xWriterDoc = self.xUITest.getTopFocusWindow()
+            xWriterEdit = xWriterDoc.getChild("writer_edit")
+
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"KEYCODE": "RIGHT"}))
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"KEYCODE": "RIGHT"}))
+
+            # open the dialog (cursor is at the field)
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"KEYCODE": "ALT+DOWN"}))
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"KEYCODE": "ESC"}))
+            xWriterEdit.executeAction("TYPE", mkPropertyValues({"KEYCODE": "UP"}))
+            self.assertEqual(writer_doc.getText().getString(), "\nClick to choose a date")
 
 # vim: set shiftwidth=4 softtabstop=4 expandtab:
